pre-comp not inheritance commit